# machine

./: .gitignore  CMakeLists.txt  README  example.sh  fwd.hpp  string.cpp
doc/: Doxyfile  abort.dox  bibliography.bib  encoder.dox  fwd.dox  hash.dox  log  mainpage.dox  number.dox  string.dox
object/: makefile  test
source/: control.cpp  control.hpp  counter.cpp  counter.hpp  doc  encoder.cpp  encoder.hpp  hash.hpp  input.cpp  input.hpp  machine.cpp  machine.hpp  number.cpp  number.hpp  output.cpp  output.hpp  queue.cpp  queue.hpp  run.cpp  stack.cpp  stack.hpp  string.cpp  string.hpp  tape.cpp  tape.hpp  unsigned_counter.cpp  unsigned_counter.hpp
src/: abort.cpp  console.cpp  console.hpp  control.cpp  control.hpp  counter.cpp  counter.hpp  encoder.cpp  encoder.hpp  fwd.hpp  gallery.cpp  hash.hpp  input.cpp  input.hpp  machine.cpp  machine.hpp  number.cpp  number.hpp  output.cpp  output.hpp  queue.cpp  queue.hpp  ram.cpp  ram.hpp  run.cpp  stack.cpp  stack.hpp  string.cpp  string.hpp  tape.cpp  tape.hpp  tui.cpp  unsigned_counter.cpp  unsigned_counter.hpp
test/number/: makefile  number_test.cpp
the_language_of_machines/: run_all.sh  tests_list
the_language_of_machines/chapter_1/: run.sh  run_all.sh  tests_list
the_language_of_machines/chapter_1/example_1/: test_accept
the_language_of_machines/chapter_1/example_10/: info
the_language_of_machines/chapter_1/example_12/: test_accept  test_block
the_language_of_machines/chapter_1/example_13/: program
the_language_of_machines/chapter_1/example_16/: test_accept  test_block
the_language_of_machines/chapter_1/example_18/: info  test_block
the_language_of_machines/chapter_1/example_19/: test_accept
the_language_of_machines/chapter_1/example_1_1/: info  program.m  test_reject
the_language_of_machines/chapter_1/example_1_10/: program.m  test_block
the_language_of_machines/chapter_1/example_1_11/: info  program.m  test.i  test_accept  test_block
the_language_of_machines/chapter_1/example_1_12/: info  program.m  test.i
the_language_of_machines/example_1_1/: info  program.m  test.i
the_language_of_machines/example_1_2/: program.m  test.i
the_language_of_machines/example_1_3/: info  program.m
the_language_of_machines/exercice_1_1_1/: info  program.m
the_language_of_machines/exercice_1_1_2/: program.m  run.sh  test.i
the_language_of_machines/exercice_1_1_3/: program.m
the_language_of_machines/exercice_1_1_4/: info  program.m  test.i
the_language_of_machines/exercice_1_1_5/: solution
the_languages_of_machines/: example_1_3.cpp  example_1_3.m  makefile  run.cpp
the_languages_of_machines/example_1_3/: program.m  run.sh  test.i
(+296 files in other folders)
